--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -148,6 +148,14 @@ package_time: {{page.package_time}}<br/>
 install_time: {{page.install_time}}<br/>
 machine_name: {{page.machine_name}}<br/>
 packaging_skipped: {{page.packaging_skipped}}<br/>
+coverage_enabled: {{page.coverage_enabled}}<br/>
+coverage_pass_limit:  {{page.coverage_pass_limit}}<br/>
+coverage_warn_limit:  {{page.coverage_warn_limit}}<br/>
+coverage_lines:  {{page.coverage_lines}}<br/>
+coverage_total_lines:  {{page.coverage_total_lines}}<br/>
+coverage_functions:  {{page.coverage_functions}}<br/>
+coverage_total_functions:  {{page.coverage_total_functions}}<br/>
+coverage_url: <a href="{{page.coverage_url}}">{{page.coverage_url}}</a><br/>
 <br/>
 
 <script type="text/javascript">
