--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -119,7 +119,7 @@ results_data.test_results.sort(compare_test_data);
   <div class='panel-heading'>
     <h4 class='panel-title'>
       <a data-toggle='collapse' data-parent='#accordion-variables' href='#collapse-variables'>
-        Test Details
+        Build Details
       </a>
     </h4>
   </div>
