Wrap up new dashboard stuff

--- a/_includes/common.html
+++ b/_includes/common.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery-parsequery/jquery.parsequery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
