Initial graphing of performance results

--- a/_includes/common.html
+++ b/_includes/common.html
@@ -20,6 +20,8 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<script src="bower_components/lodash/lodash.min.js"></script>
+
 <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 
 <link rel="stylesheet" href="bower_components/octicons/octicons/octicons.css">
@@ -98,5 +100,16 @@ $('table').each(function() {
 });
 });
 */
+
+function parseDate(d) {
+  var parsed_date = Date.parse(d);
+
+  if (isNaN(parsed_date)) {
+    return new Date(Date.parse(d.replace(/ /, "T").replace(/ /, "")));
+  } else {
+    return new Date(parsed_date);
+  }
+}
+
 </script>
 
