Fix perf basline and develop graph display

--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -357,6 +357,7 @@ function format_performance_rows(test)
   result += " \
              <div class='panel panel-" + labeltype + "'> \
                <div class='panel-heading'> \
+               <span class='badge pull-right'>Total Cost: " + test.totals + "</span>  \
                <h4 class='panel-title'> \
                  <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "'> " +
                    test.test_name + " \
