--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -7,6 +7,7 @@
 {% assign base_repository = page.repository %}
 {% assign results_repository = page.results_repository %}
 {% include common_variables.html %}
+<script src="results_helpers.js"></script>
 </head>
 
 
@@ -34,90 +35,20 @@ var num_tables = 0;
 
 results_data = {{ content | json }};
 accordian_group = 0;
-function compare_data(a,b) {
-  if (a.messagetype != b.messagetype)
-  {
-    if (a.messagetype.search(/err/i) != -1) return -1;
-    if (b.messagetype.search(/err/i) != -1) return 1;
-
-    if (a.messagetype.search(/warn/i) != -1) return -1;
-    if (b.messagetype.search(/warn/i) != -1) return 1;
-  }
-
-  if (a.messagetype < b.messagetype)
-  {
-    return -1;
-  } else if (a.messagetype > b.messagetype) {
-    return 1;
-  } else {
-    if (a.filename < b.filename) {
-      return -1;
-    } else if (a.filename > b.filename) {
-      return 1;
-    } else {
-      if (a.linenumber < b.linenumber) {
-        return -1;
-      } else if (a.linenumber > b.linenumber) {
-        return 1;
-      } else {
-        if (a.colnumber < b.colnumber) {
-          return -1;
-        } else if (a.colnumber > b.colnumber) { 
-          return 1;
-        } else {
-          return 0;
-        }
-      }
-    }
-  }
-}
-
-function compare_performance_data(a,b) {
-  if (a.test_name < b.test_name) {
-    return -1;
-  } else if (a.test_name > b.test_name) {
-    return 1;
-  } else {
-    return 0;
-  }
-}
-
-function compare_test_data(a,b) {
-  if (a.status != b.status)
-  {
-    if (a.status.search(/fail/i) != -1) return -1;
-    if (b.status.search(/fail/i) != -1) return 1;
-
-    if (a.status.search(/warn/i) != -1) return -1;
-    if (b.status.search(/warn/i) != -1) return 1;
-  }
-
-  if (a.status < b.status)
-  {
-    return -1;
-  } else if (a.status > b.status) {
-    return 1;
-  } else {
-    if (a.name < b.name) {
-      return -1;
-    } else if (a.name > b.name) {
-      return 1;
-    } else {
-      if (a.time < b.time) {
-        return -1;
-      } else if (a.time > b.time) {
-        return 1;
-      } else {
-        return 0;
-      }
-    }
-  }
-}
-
 
 results_data.build_results.sort(compare_data);
 results_data.test_results.sort(compare_test_data);
 results_data.performance_results.test_files.sort(compare_performance_data);
+
+
+function format_configuration(data)
+{
+  var retval = "";
+  for (var p in data.configuration) {
+    retval += p + ": " + data.configuration[p] + "<br/>";
+  }
+  return retval;
+}
 </script>
 
 
@@ -143,6 +74,12 @@ results_data.performance_results.test_files.sort(compare_performance_data);
 <br/>
 <br/>
 
+tag_name: <a href="{{base_release_url}}/{{page.tag_name}}">{{page.tag_name}}</a><br/>
+commit_sha: <a href="{{base_commit_url}}/{{page.commit_sha}}">{{page.commit_sha}}</a><br/>
+branch_name: <a href="{{base_branch_url}}/{{page.branch_name}}">{{page.branch_name}}</a><br/>
+pull_request_issue_id:  <a href="{{base_pull_request_url}}/{{page.pull_request_issue_id}}">{{page.pull_request_issue_id}}</a><br/>
+coverage_url: <a href="{{page.coverage_url}}">{{page.coverage_url}}</a><br/>
+<br/>
 
 <div class='panel panel-info'>
   <div class='panel-heading'>
@@ -154,46 +91,9 @@ results_data.performance_results.test_files.sort(compare_performance_data);
   </div>
   <div id='collapse-variables' class='panel-collapse collapse'>
     <div class='panel-body'>
-      date: {{page.date}}<br/>
-      unhandled_failure: {{page.unhandled_failure}}<br/>
-      build_error_count: {{page.build_error_count}}<br/>
-      build_warning_count: {{page.build_warning_count}}<br/>
-      package_error_count: {{page.package_error_count}}<br/>
-      package_warning_count: {{page.package_warning_count}}<br/>
-      test_count: {{page.test_count}}<br/>
-      test_passed_count: {{page.test_passed_count}}<br/>
-      repository: {{page.repository}}<br/>
-      compiler: {{page.compiler}}<br/>
-      compiler_version: {{page.compiler_version}}<br/>
-      architecture: {{page.architecture}}<br/>
-      os: {{page.os}}<br/>
-      os_release: {{page.os_release}}<br/>
-      is_release: {{page.is_release}}<br/>
-      release_packaged: {{page.release_packaged}}<br/>
-      tag_name: <a href="{{base_release_url}}/{{page.tag_name}}">{{page.tag_name}}</a><br/>
-      commit_sha: <a href="{{base_commit_url}}/{{page.commit_sha}}">{{page.commit_sha}}</a><br/>
-      branch_name: <a href="{{base_branch_url}}/{{page.branch_name}}">{{page.branch_name}}</a><br/>
-      test_run: {{page.test_run}}<br/>
-      pull_request_issue_id:  <a href="{{base_pull_request_url}}/{{page.pull_request_issue_id}}">{{page.pull_request_issue_id}}</a><br/>
-      pull_request_base_repository: {{page.pull_request_base_repository}}<br/>
-      pull_request_base_ref: {{page.pull_request_base_ref}}<br/>
-      device_id: {{page.device_id}}<br/>
-      pending: {{page.pending}}<br/>
-      analyze_only: {{page.analyze_only}}<br/>
-      build_time: {{page.build_time}}<br/>
-      test_time: {{page.test_time}}<br/>
-      package_time: {{page.package_time}}<br/>
-      install_time: {{page.install_time}}<br/>
-      machine_name: {{page.machine_name}}<br/>
-      packaging_skipped: {{page.packaging_skipped}}<br/>
-      coverage_enabled: {{page.coverage_enabled}}<br/>
-      coverage_pass_limit:  {{page.coverage_pass_limit}}<br/>
-      coverage_warn_limit:  {{page.coverage_warn_limit}}<br/>
-      coverage_lines:  {{page.coverage_lines}}<br/>
-      coverage_total_lines:  {{page.coverage_total_lines}}<br/>
-      coverage_functions:  {{page.coverage_functions}}<br/>
-      coverage_total_functions:  {{page.coverage_total_functions}}<br/>
-      coverage_url: <a href="{{page.coverage_url}}">{{page.coverage_url}}</a><br/>
+      <script>
+document.writeln(format_configuration(results_data));
+      </script>
       <br/>
     </div>
   </div>
@@ -230,78 +130,6 @@ var ref = "{{ page.tag_name }}";
 {% else %}
 var ref = "{{ page.commit_sha }}"
 {% endif %}
-
-function get_label_type(stat)
-{
-  var labeltype="info";
-  if (stat.search(/warn/i) != -1)
-  {
-    labeltype = "warning";
-  } else if (stat.search(/err/i) != -1 || stat.search(/fail/i) != -1) {
-    labeltype = "danger";
-  } else if (stat.search(/pass/i) != -1) {
-    labeltype = "success";
-  }
-
-  return labeltype;
-}
-
-function format_error_rows(data)
-{
-  if (data.length == 0) return "";
-
-  var result = "";
-  var last_message_type = "";
-  ++accordian_group;
-  result = " <div class='panel-group' id='accordion-"+accordian_group+"'> ";
-
-  var count = 0;
-  for (var i = 0; i < data.length; ++i) {
-    var url = "https://github.com/" + repo + "/blob/" + ref + "/" + data[i].filename + "#L" + data[i].linenumber;
-
-    var labeltype = get_label_type(data[i].messagetype);
-
-    if (data[i].messagetype != last_message_type) {
-      var messagecount = 0;
-      for (var j = i; j < data.length && data[j].messagetype == data[i].messagetype; ++j) {
-        ++messagecount;
-      }
-
-      if (last_message_type != "") {
-        // close last block
-        result += "</table></div></div></div>";
-      }
-      var table_id = "table-" + ++num_tables;
-
-      result += " \
-  <div class='panel panel-" + labeltype + "'> \
-    <div class='panel-heading'> \
-      <span class='badge pull-right'>" + messagecount + "</span> \
-      <h4 class='panel-title'> \
-        <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "-" + i + "'> " +
-          data[i].messagetype + " messages \
-        </a> \
-      </h4> \
-    </div> \
-    <div id='collapse-" + accordian_group + "-" + i +"' class='panel-collapse collapse'> \
-      <div class='panel-body'> \
-<table id='" + table_id + "' class='table table-striped'> \
-<thead><tr><th></th><th>location</th><th>message</th></tr></thead>";
-
-      last_message_type = data[i].messagetype;
-      count = 0;
-    }
-    ++count;
-
-
-    result += "<tr><td><span class='label label-" + labeltype + "'>" + data[i].messagetype + "</span></td><td><h6><a href='" + url + "'>" + data[i].filename + ":" + data[i].linenumber + ":" + data[i].colnumber + "</a></h6></td><td><code>" + data[i].message.replace(/\n/g, "<br/>") + "</code></td></tr>";
-  }
-
-  result += "</table></div></div></div></div> <script>$(function(){ $('#" + table_id  + "').tablesorter(); })<\/script>";
-
-
-  return result;
-}
 
 document.writeln(format_error_rows(results_data.build_results));
 
@@ -340,108 +168,6 @@ document.writeln(format_error_rows(results_data.build_results));
 
 <script type="text/javascript">
 
-function htmlEncode(value){
-    //create a in-memory div, set it's inner text(which jQuery automatically encodes)
-    //then grab the encoded contents back out.  The div never exists on the page.
-    return $('<div/>').text(value).html();
-}
-
-function format_performance_rows(test)
-{
-  var result = "";
-  var last_message_type = "";
-  ++accordian_group;
-  var labeltype = "info";
-  var table_id = "table-" + ++num_tables;
-  result = " <div class='panel-group' id='accordion-"+accordian_group+"'> ";
-  result += " \
-             <div class='panel panel-" + labeltype + "'> \
-               <div class='panel-heading'> \
-               <span class='badge pull-right'>Total Cost: " + test.totals + "</span>  \
-               <h4 class='panel-title'> \
-                 <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "'> " +
-                   test.test_name + " \
-                 </a> \
-               </h4> \
-             </div> \
-             <div id='collapse-" + accordian_group + "' class='panel-collapse collapse'> \
-               <div class='panel-body'> \
-               <table id='" + table_id + "' class='table table-striped'> \
-             <thead><tr><th>function name</th><th>call count</th><th>total cost</th></tr></thead>";
-
-
-  for (var i = 0; i < test.data.length; ++i) {
-    result += "<tr><td>" + htmlEncode(test.data[i].function_name) + "</td><td>" + test.data[i].count + "</td><td>" + test.data[i].cost + "</td></tr>";
-  }
-
-  result += "</table></div></div></div></div> <script>$(function(){ $('#" + table_id  + "').tablesorter(); })<\/script>";
-
-
-  return result;
-}
-
-
-function format_test_rows(data)
-{
-  if (data.length == 0) return "";
-
-  var result = "";
-  var last_message_type = "";
-  ++accordian_group;
-  result = " <div class='panel-group' id='accordion-"+accordian_group+"'> ";
-
-  var count = 0;
-  for (var i = 0; i < data.length; ++i) {
-    var labeltype = get_label_type(data[i].status);
-
-    if (data[i].status != last_message_type) {
-      var messagecount = 0;
-      for (var j = i; j < data.length && data[j].status == data[i].status; ++j) {
-        ++messagecount;
-      }
-
-      if (last_message_type != "") {
-        // close last block
-        result += "</table></div></div></div>";
-      }
-      var table_id = "table-" + ++num_tables;
-
-      result += " \
-  <div class='panel panel-" + labeltype + "'> \
-    <div class='panel-heading'> \
-      <span class='badge pull-right'>" + messagecount + "</span> \
-      <h4 class='panel-title'> \
-        <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "-" + i + "'> " +
-          data[i].status + " \
-        </a> \
-      </h4> \
-    </div> \
-    <div id='collapse-" + accordian_group + "-" + i + "' class='panel-collapse collapse'> \
-      <div class='panel-body'> \
-<table id='" + table_id + "' class='table table-striped'> \
-<thead><tr><th></th><th>name</th><th>time</th></tr></thead>";
-
-      last_message_type = data[i].status;
-      count = 0;
-    }
-    ++count;
-
-    result += "<tr><td><span class='label label-" + labeltype + "'>" + data[i].status + "</span></td><td>" + data[i].name + "</td><td>" + data[i].time + "</td></tr>";
-    if (labeltype != "success" && data[i].output) {
-      result += "<tr><td></td><td colspan=2>";
-      result += data[i].output.replace(/\n/g, "<br/>");
-      if (data[i].parsed_errors) {
-        result += format_error_rows(data[i].parsed_errors);
-      }
-      result += "</td></tr>";
-    } 
-  }
-
-  result += "</table></div></div></div></div> <script>$(function(){ $('#" + table_id  + "').tablesorter(); })<\/script>";
-
-
-  return result;
-}
 
 
 
