Fix (again) date parsing, rotate X labels

--- a/_includes/common.html
+++ b/_includes/common.html
@@ -58,7 +58,7 @@
 
 
 <script>
-var d3_date_parser = d3.time.format("%Y-%m-%d %H:%M:%S %z");
+var d3_date_parser = d3.time.format("%Y-%m-%d %H:%M:%S %Z");
 
 function parseDate(d) {
   return d3_date_parser.parse(d);
